AU for nov-dez and fixed Lucas model

--- a/main.ipynb
+++ b/main.ipynb
@@ -15,8 +15,12 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python38564bittscondaf5ac9b1e85204fb5b01559461c05b12f",
-   "display_name": "Python 3.8.5 64-bit ('ts': conda)",
-   "language": "python"
+   "display_name": "Python 3.8.5 64-bit ('ts': conda)"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "f83f3e32a97abb6f5eeb5a907eeed09e6f8839a9d36eb261fa7f1d4e4ea8647a"
+   }
   }
  },
  "nbformat": 4,
@@ -37,7 +41,7 @@
     "from torch.utils.data import DataLoader\n",
     "from copy import deepcopy\n",
     "from src.dataset import GoncaDataset\n",
-    "from src.model import MLP, AutoEncoder, FinalModule\n",
+    "from src.model import MLP, AutoEncoder, FinalModule, MLPLucas\n",
     "import scipy.io as sio\n",
     "import os\n",
     "\n",
@@ -126,7 +130,7 @@
      "text": [
       "/home/mateus/miniconda3/envs/ts/lib/python3.8/site-packages/numpy/core/_asarray.py:102: ComplexWarning: Casting complex values to real discards the imaginary part\n",
       "  return array(a, dtype, copy=False, order=order)\n",
-      "Decomp serie in 8 components\n",
+      "Decomp serie in 7 components\n",
       "Getting test components\n"
      ]
     }
@@ -162,13 +166,13 @@
       "\n",
       "  | Name    | Type    | Params\n",
       "------------------------------------\n",
-      "0 | encoder | Encoder | 815 K \n",
+      "0 | encoder | Encoder | 813 K \n",
       "1 | decoder | Decoder | 1.1 M \n",
       "------------------------------------\n",
       "1.9 M     Trainable params\n",
       "0         Non-trainable params\n",
       "1.9 M     Total params\n",
-      "Epoch 4: 100%|██████████| 548/548 [00:15<00:00, 35.73it/s, loss=0.000185, v_num=457, train_loss_step=0.000227, train_loss_epoch=0.000303]\n"
+      "Epoch 4: 100%|██████████| 67/67 [00:01<00:00, 43.76it/s, loss=0.000571, v_num=788, train_loss_step=0.000529, train_loss_epoch=0.000728]\n"
      ]
     },
     {
@@ -208,13 +212,13 @@
       "\n",
       "  | Name    | Type    | Params\n",
       "------------------------------------\n",
-      "0 | encoder | Encoder | 815 K \n",
+      "0 | encoder | Encoder | 813 K \n",
       "1 | fc_out  | Linear  | 6.2 K \n",
       "------------------------------------\n",
       "6.2 K     Trainable params\n",
-      "815 K     Non-trainable params\n",
-      "821 K     Total params\n",
-      "Epoch 4: 100%|██████████| 548/548 [00:07<00:00, 72.90it/s, loss=0.000701, v_num=458, train_loss_step=0.000847, train_loss_epoch=0.000661]\n"
+      "813 K     Non-trainable params\n",
+      "819 K     Total params\n",
+      "Epoch 4: 100%|██████████| 67/67 [00:00<00:00, 72.48it/s, loss=0.00201, v_num=789, train_loss_step=0.00208, train_loss_epoch=0.00222]\n"
      ]
     },
     {
@@ -246,20 +250,34 @@
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
+      "Decomp serie in 7 components\n",
+      "/home/mateus/miniconda3/envs/ts/lib/python3.8/site-packages/numpy/core/_asarray.py:102: ComplexWarning: Casting complex values to real discards the imaginary part\n",
+      "  return array(a, dtype, copy=False, order=order)\n",
+      "Decomp sub comp in 7 components\n",
+      "Decomp sub comp in 7 components\n",
+      "Decomp sub comp in 7 components\n",
+      "Decomp sub comp in 7 components\n",
+      "Decomp sub comp in 7 components\n",
+      "Decomp sub comp in 7 components\n",
+      "Decomp sub comp in 7 components\n",
+      "Getting test components\n",
       "GPU available: True, used: True\n",
       "TPU available: None, using: 0 TPU cores\n",
       "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "/home/mateus/miniconda3/envs/ts/lib/python3.8/site-packages/pytorch_lightning/utilities/distributed.py:50: UserWarning: you defined a validation_step but have no val_dataloader. Skipping validation loop\n",
+      "  warnings.warn(*args, **kwargs)\n",
       "\n",
-      "  | Name   | Type       | Params\n",
-      "--------------------------------------\n",
-      "0 | layers | Sequential | 75.3 K\n",
-      "--------------------------------------\n",
-      "75.3 K    Trainable params\n",
+      "  | Name        | Type       | Params\n",
+      "-------------------------------------------\n",
+      "0 | comp_layers | ModuleList | 28    \n",
+      "1 | fc_out      | Sequential | 81.7 K\n",
+      "-------------------------------------------\n",
+      "81.7 K    Trainable params\n",
       "0         Non-trainable params\n",
-      "75.3 K    Total params\n",
-      "Epoch 4: 100%|██████████| 548/548 [00:07<00:00, 70.59it/s, loss=0.000506, v_num=459, train_loss_step=0.000449, train_loss_epoch=0.00054]\n"
+      "81.7 K    Total params\n",
+      "Epoch 4: 100%|██████████| 67/67 [00:02<00:00, 22.78it/s, loss=0.00463, v_num=790, train_loss_step=0.00403, train_loss_epoch=0.0987]\n"
      ]
     },
     {
@@ -274,9 +292,23 @@
     }
    ],
    "source": [
-    "mlp = MLP(input_size=input_size, horizons=HORIZONS)\n",
+    "dataset_lucas = GoncaDataset(window=WINDOW,\n",
+    "                                 horizons=HORIZONS,\n",
+    "                                 data_name=DATASET,\n",
+    "                                 decomp_method='2fft',\n",
+    "                                 decomp=True)\n",
+    "\n",
+    "train_loader_lucas = DataLoader(dataset_lucas, batch_size=128,\n",
+    "                                shuffle=True, num_workers=8)\n",
+    "input_example_lucas = next(iter(train_loader_lucas))[0]\n",
+    "input_size_lucas = input_example_lucas.shape[1] * \\\n",
+    "    input_example_lucas.shape[2]\n",
+    "\n",
+    "mlp = MLPLucas(window_size=input_example_lucas.shape[1],\n",
+    "                n_comps=input_example_lucas.shape[2],\n",
+    "                horizons=HORIZONS)\n",
     "trainer = Trainer(gpus=1, max_epochs=5)\n",
-    "trainer.fit(mlp, train_dataloader=train_loader)\n"
+    "trainer.fit(mlp, train_dataloader=train_loader_lucas)"
    ]
   },
   {
@@ -289,12 +321,14 @@
     "from pytorch_forecasting.metrics import MAE, RMSE\n",
     "\n",
     "dataset.set_type('test')\n",
+    "dataset_lucas.set_type('test')\n",
     "mlp = mlp.cpu()\n",
     "final_model = final_model.cpu()\n",
     "X_test = dataset.samples\n",
+    "X_test_lucas = dataset_lucas.samples\n",
     "y = dataset.labels\n",
     "y_final = final_model(X_test).detach()/dataset.test_scaler.scale_\n",
-    "y_mlp = mlp(X_test).detach()/dataset.test_scaler.scale_\n",
+    "y_mlp = mlp(X_test_lucas).detach()/dataset_lucas.test_scaler.scale_\n",
     "MLP = {key: list() for key in ['mse', 'rmse', 'mae']}\n",
     "TAETS = {key: list() for key in ['mse', 'rmse', 'mae']}\n",
     "\n",
