trying auto retrain

--- a/cer.ipynb
+++ b/cer.ipynb
@@ -129,7 +129,8 @@
     "                        plt.plot(y_mlp)\n",
     "                        plt.legend(['Original', 'Cabral'])\n",
     "                        plt.show()\n",
-    "                        again = input('Again? [y|n]') == 'y'\n",
+    "                        latest_loss = trainer.callback_metrics['train_loss'].item() \n",
+    "                        again = latest_loss < 0.022\n",
     "                        if not again:\n",
     "                            res = [None]*3 + [None]*i + y_mlp.tolist()\n",
     "                            res = np.array(res)\n",
