--- a/cer.ipynb
+++ b/cer.ipynb
@@ -83,6 +83,10 @@
     "    for CENTRAL_EOLICA in centrais:\n",
     "        for TIME_STEP in steps:\n",
     "            for MES in meses:\n",
+    "                print()\n",
+    "                print()\n",
+    "                print()\n",
+    "                print(f'{COMPLEXO_EOLICO}->{CENTRAL_EOLICA}->{TIME_STEP}->{MES}')\n",
     "                DECOMP=True\n",
     "                DEVICE = torch.device('cuda')\n",
     "                if not os.path.exists(f'data/components/{CENTRAL_EOLICA}_{MES}_{TIME_STEP}'):\n",
