good stuff here

--- a/cer.ipynb
+++ b/cer.ipynb
@@ -75,7 +75,7 @@
     "    'Riachao': ['Riachao_I', 'Riachao_II', 'Riachao_III', 'Riachao_IV', 'Riachao_V', 'Riachao_VI', 'Riachao_VII'],\n",
     "    'Taiba': ['Aguia', 'Andorinha', 'Colonia'],\n",
     "}\n",
-    "steps = ['1_day', '30_min']\n",
+    "steps = ['30_min']\n",
     "meses = ['Sep', 'Oct', 'Nov', 'Dec']\n",
     "COMPLEXO_EOLICO='Amontada'\n",
     "results = {}\n",
@@ -109,7 +109,7 @@
     "                        print(f'Horizon: {i+1}')\n",
     "                        dataset_lucas.set_type('train')\n",
     "                        dataset_lucas.set_horizon(i)\n",
-    "                        train_loader_lucas = DataLoader(dataset_lucas, batch_size=128,\n",
+    "                        train_loader_lucas = DataLoader(dataset_lucas, batch_size=256,\n",
     "                                                        shuffle=True, num_workers=8)\n",
     "                        input_example_lucas = next(iter(train_loader_lucas))[0]\n",
     "                        input_size_lucas = input_example_lucas.shape[1] * \\\n",
@@ -118,7 +118,7 @@
     "                        mlp = MLPLucas(window_size=input_example_lucas.shape[1],\n",
     "                                    n_comps=input_example_lucas.shape[2],\n",
     "                                    horizons=1)\n",
-    "                        trainer = Trainer(gpus=1, max_epochs=10)\n",
+    "                        trainer = Trainer(gpus=1, max_epochs=50)\n",
     "                        trainer.fit(mlp, train_dataloaders=train_loader_lucas)\n",
     "                        dataset_lucas.set_type('test')\n",
     "                        mlp = mlp.cpu()\n",
@@ -134,7 +134,7 @@
     "                        plt.legend(['Original', 'Cabral'])\n",
     "                        plt.show()\n",
     "                        latest_loss = trainer.callback_metrics['train_loss'].item() \n",
-    "                        again = latest_loss < 0.022\n",
+    "                        again = latest_loss > 0.024\n",
     "                        if not again:\n",
     "                            res = [None]*3 + [None]*i + y_mlp.tolist()\n",
     "                            res = np.array(res)\n",
